--- a/public/src/template/dashboard.html
+++ b/public/src/template/dashboard.html
@@ -43,7 +43,7 @@
             </md-card>
         </div>
     </div>
-
+    <div id="loc"></div>
     <md-fab-speed-dial id="fab">
         <md-fab-trigger>
             <md-button aria-label="add" class="md-fab md-warn" id="fab-button" ng-click="dashCtrl.open()">
