--- a/public/src/template/dashboard.html
+++ b/public/src/template/dashboard.html
@@ -13,7 +13,7 @@
                      <div id="card-header" ng-class="{fiesta: item.past == 'fish', golden_yellow: item.past == 'yellow', atom_green: item.past == 'green', gibson_red: item.past == 'red', sea_blue: item.past == 'blue', ultra_marine: item.past == 'ultra', nice_green: item.past == 'nice-green', gibson_orange: item.past == 'orange'}"></div>
                  </md-card-header>
                 <md-card-content >
-                    <p>
+                    <p id="card-content-idea">
                         The titles of Washed Out's breakthrough song and the first single from Paracosm share the
                         two most important words in Ernest Greene's musical language: feel it. It's a simple request, as well...
                     </p>
