--- a/public/src/template/signup.html
+++ b/public/src/template/signup.html
@@ -16,6 +16,7 @@
     <div class="m-b text-sm">
       Sign up to your {{app.name}} Account
     </div>
+
     <form name="form">
       <div class="md-form-group">
         <input type="text" class="md-input" ng-model="signupCtrl.userName" required>
@@ -44,7 +45,13 @@
   <div class="p-v-lg text-center">
     <div>Already have an account? <button ui-sref="signin" class="md-btn">Sign in</button></div>
   </div>
+
+<!--    <div layout="row" layout-sm="column" layout-align="space-around">
+        <md-progress-circular md-mode="indeterminate"></md-progress-circular>
+    </div> -->
 </div>
+
+
 
 <!--<script type="text/javascript">
       var onloadCallback = function() {
