--- a/public/src/styles/style.css
+++ b/public/src/styles/style.css
@@ -55,6 +55,7 @@ ul {
     border-radius: 6px;
     width: 450px;
 }
+
 .oddflex {
     margin-left:85px ;
 }
@@ -67,6 +68,7 @@ md-card-content{
     font-family: 'Roboto', sans-serif;
     font-size: 18px;
 }
+
 #card-platform {
     background-color: rgb(239, 239, 239);
 }
@@ -74,8 +76,14 @@ md-card md-card-header {
     padding: 0px;
 }
 
-#card-header {
+#dash-card-header {
     height: 4px;
+    width: 100%;
+    margin-bottom: 20px;
+    border-radius: 6px 6px 0 0;
+}
+#timeline-card-header{
+    height: 6px;
     width: 100%;
     margin-bottom: 20px;
     border-radius: 6px 6px 0 0;
@@ -106,33 +114,7 @@ md-card md-card-header {
 }
 span {
     font-family: 'Roboto', sans-serif;
-/*    color: rgba(119, 115, 115, 0.87); */
 }
-.heart {
-  width: 80px;
-  height: 80px;
-  position: absolute;
-  left: 50%;
-  top: 50%;
-  transform: translate(-50%, -50%);
-  background: url(https://cssanimation.rocks/images/posts/steps/heart.png) no-repeat;
-  background-position: 0 0;
-  cursor: pointer;
-  animation: fave-heart 1s steps(28);
-}
-.heart:hover {
-  background-position: -2800px 0;
-  transition: background 1s steps(28);
-}
-@keyframes fave-heart {
-  0% {
-    background-position: 0 0;
-  }
-  100% {
-    background-position: -2800px 0;
-  }
-}
-
 #fab {
    position: fixed;
    bottom: 0;
@@ -227,4 +209,36 @@ span {
 }
 #card-content-idea {
     text-align: center;
+}
+#timeline-card {
+    border-radius: 6px;
+    width: 500px;
+    margin: auto;
+}
+#timline-card-content {
+    height: 200px;
+    text-align: center;
+    font-family: 'Roboto', sans-serif;
+    font-size: 20px;
+    padding-top: 35px;
+}
+#timeline-choice1 {
+    width:50px;
+    height: 60px;
+    margin: auto;
+}
+#timeline-choice2 {
+    width:50px;
+    height: 30px;
+    margin: auto;
+}
+
+#timline-row {
+    margin-top: 0;
+}
+.firstcard {
+    width: 400px;
+}
+#circular-dialog {
+    overflow: hidden;
 }
