--- a/public/src/template/content.html
+++ b/public/src/template/content.html
@@ -1,11 +1,11 @@
 <div class="box">
   <!-- Content Navbar -->
   <div class="navbar md-whiteframe-z1 no-radius" ng-class="$state.current.data.theme ? $state.current.data.theme.primary : app.setting.theme.primary" id="nav-bar">
-    <!-- Open side - Naviation on mobile -->
-    <a md-ink-ripple ng-click="openAside()" ng-hide="$state.current.data.child" class="navbar-item pull-left visible-xs visible-sm"><i class="mdi-navigation-menu i-24"></i></a>
+    <!-- Open side - Naviation on mobile
+    <a md-ink-ripple ng-click="openAside()" ng-hide="$state.current.data.child" class="navbar-item pull-left visible-xs visible-sm"><i class="mdi-navigation-menu i-24"></i></a>-->
     <!-- / -->
-    <!-- GoBack - Back to parent if $state has the param 'child' -->
-    <a md-ink-ripple class="navbar-item pull-left" ng-click="goBack()" ng-show="$state.current.data.child" ><i class="mdi-navigation-arrow-back i-24"></i></a>
+    <!-- GoBack - Back to parent if $state has the param 'child'
+    <a md-ink-ripple class="navbar-item pull-left" ng-click="goBack()" ng-show="$state.current.data.child" ><i class="mdi-navigation-arrow-back i-24"></i></a>-->
     <!-- / -->
     <!-- Page title - Bind to $state's title -->
     <div class="navbar-item pull-left h4" ng-bind="$state.current.data.title"></div>
